<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_row="5"
    android:columnCount="4">

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="4"
        android:layout_gravity="fill"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/button_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven" />

    <Button
        android:id="@+id/button_eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eight" />

    <Button
        android:id="@+id/button_nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nine" />

    <Button
        android:id="@+id/button_div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_row="1"
        android:text="@string/div" />

    <Button
        android:id="@+id/button_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four" />

    <Button
        android:id="@+id/button_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five" />

    <Button
        android:id="@+id/button_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/six" />

    <Button
        android:id="@+id/button_molt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mult" />

    <Button
        android:id="@+id/button_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one" />

    <Button
        android:id="@+id/button_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two" />

    <Button
        android:id="@+id/button_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three" />

    <Button
        android:id="@+id/button_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/C" />

    <Button
        android:id="@+id/button_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pls" />

    <Button
        android:id="@+id/button_equally"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eql" />

</GridLayout>